--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,58 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.App {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.col-left {
+  width: 20%;
+  height: 100vh;
+  background-color: rgb(70, 73, 75);
+  text-align: center;
+}
+
+.col-left h1 {
+  width: 100%;
+  background-color: hsl(225, 6%, 13%);
+  color: #fff;
+  margin: 0;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.col-left form {
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.col-left button {
+  padding: 0.6rem 1.5rem;
+  background-color: hsl(225, 6%, 13%);
+  border: 2px solid hsl(225, 6%, 13%);
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+  margin-top: 1rem;
+}
+
+.col-left button:hover {
+  background-color: rgba(192, 183, 183, 0.781);
+  border-color: #fff;
+}
+
+.col-right {
+  width: 80%;
+  height: 100vh;
 }
 
 .top-pane {
