--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,25 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.App {
+/* .App {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
+} */
+
+.row-top {
+  height: 50vh;
+  display: flex;
+}
+
+.row-down {
+  height: 50vh;
 }
 
 .col-left {
   width: 20%;
-  height: 100vh;
+  height: 100%;
   background-color: rgb(70, 73, 75);
   text-align: center;
 }
@@ -52,7 +62,7 @@ body {
 
 .col-right {
   width: 80%;
-  height: 100vh;
+  height: 100%;
 }
 
 .top-pane {
@@ -60,7 +70,7 @@ body {
 }
 
 .pane {
-  height: 50vh;
+  height: 100%;
   display: flex;
 }
 
@@ -117,4 +127,37 @@ body {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   overflow: hidden;
+}
+
+@media only screen and (max-width: 1200px) {
+  .row-top {
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .col-left {
+    width: 100%;
+    height: 20%;
+  }
+
+  .col-right {
+    width: 100%;
+    height: 80%;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .row-top {
+    height: auto;
+  }
+
+  .col-right {
+    flex-direction: column;
+  }
+
+  .code-mirror-wrapper {
+    height: 20rem;
+  }
 }
